# multi-person-household

./: .env.example  .gitignore  AGENTS.md  CODEX_GOAL.md  CODEX_GOAL_Jungwuk_backend.md  DESIGN.md  PRD.md  PRD_BYEONGJU.yaml  PRD_Jungwuk.md  README.md  SEED_Jungwuk_backend.yaml  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
backend/: .env.example  .gitignore  README.md  TEST_CHECKLIST.md  pyproject.toml  requirements.txt  test.bat  test.ps1  test.sh
backend/app/: config.py  crud.py  database.py  deps.py  main.py  models.py  schemas.py  seed.py
backend/app/routers/: ai.py  album.py  auth.py  chats.py  flash_meets.py  friends.py  setlogs.py  users.py
backend/app/services/: image_generation.py  media.py  moderation.py  realtime.py
backend/tests/: conftest.py  test_smoke.py
docs/promise/: backend-api-contract.md
src/client/: App.tsx  styles.css
src/client/api/: client.ts
